--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
   <div id="root"></div>
   <script type="text/javascript" src="/3box.min.js"></script>
   <script type="text/javascript" src="/3box-activity.min.js"></script>
+  <!-- <script type="text/javascript" src="https://unpkg.com/profile-hover@next%22%3E</script> -->
 </body>
 
 </html>
